[package]
name = "ss"
version = "0.1.0"
edition = "2021"
authors = ["HUANG KUNLUN <hkl@duck.com>"]
description = "A simple and lightweight file sharing server"
license = "GNU GPLv3"
repository = "https://git.sr.ht/~hkl/ss"
keywords = ["file-sharing", "web-server", "http", "static-files"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"

[lib]
name = "ss"
path = "src/lib.rs"

[[bin]]
name = "ss"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
